@@ -1,5 +1,14 @@
 2001-09-18  John Levon  <moz@compsoc.man.ac.uk>
 
+	* Makefile.in:
+	* op_syscalls.c:
+	* op_util.c:
+	* oprofile.h: move some code around
+
+	* oprofile.c: fix a tiny bug
+
+2001-09-18  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/opd_proc.c:
 	* dae/oprofiled.h: implement hashing of images
 
